[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scene/PlayerPlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/menu/FadeIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level1.tres" type="TileSet" id=4]
[ext_resource path="res://Scene/Level3.gd" type="Script" id=5]
[ext_resource path="res://Scene/Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/FallZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/menu/PauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Music/Level1.wav" type="AudioStream" id=9]

[node name="Level3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3World" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 4, 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="Level3World" instance=ExtResource( 1 )]
position = Vector2( 144, 48 )
currentLevel = "res://Scene/Level3.tscn"

[node name="Enter" parent="Level3World" instance=ExtResource( 2 )]
visible = false
position = Vector2( 160, 24 )

[node name="Exit" parent="Level3World" instance=ExtResource( 2 )]
visible = false
position = Vector2( 160, 376 )
scale = Vector2( 2, 1 )

[node name="TileMap" type="TileMap" parent="Level3World"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65555, 0, 0, 131072, 0, 0, 131091, 0, 0, 196608, 0, 0, 196627, 0, 0, 262144, 0, 0, 262163, 0, 0, 327680, 0, 0, 327699, 0, 0, 393216, 0, 0, 393235, 0, 0, 458752, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458771, 0, 0, 524288, 0, 0, 524307, 0, 0, 589824, 0, 0, 589826, 0, 0, 589827, 0, 0, 589840, 0, 0, 589841, 0, 0, 589843, 0, 0, 655360, 0, 0, 655379, 0, 0, 720896, 0, 0, 720915, 0, 0, 786432, 0, 0, 786451, 0, 0, 851968, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 917504, 0, 0, 917523, 0, 0, 983040, 0, 0, 983048, 0, 0, 983051, 0, 0, 983059, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048595, 0, 0, 1114112, 0, 0, 1114131, 0, 0, 1179648, 0, 0, 1179667, 0, 0, 1245184, 0, 0, 1245203, 0, 0, 1310720, 0, 0, 1310739, 0, 0, 1376256, 0, 0, 1376275, 0, 0, 1441792, 0, 0, 1441811, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1638400, 0, 0, 1638401, 0, 0, 1638402, 0, 0, 1638403, 0, 0, 1638404, 0, 0, 1638405, 0, 0, 1638406, 0, 0, 1638407, 0, 0, 1638408, 0, 0, 1638411, 0, 0, 1638412, 0, 0, 1638413, 0, 0, 1638414, 0, 0, 1638415, 0, 0, 1638416, 0, 0, 1638417, 0, 0, 1638418, 0, 0, 1638419, 0, 0 )

[node name="Enemies" type="Node2D" parent="Level3World"]

[node name="Enemy" parent="Level3World/Enemies" instance=ExtResource( 6 )]
position = Vector2( 48, 240 )

[node name="Enemy2" parent="Level3World/Enemies" instance=ExtResource( 6 )]
position = Vector2( 160, 240 )
detects_cliffs = false

[node name="Enemy3" parent="Level3World/Enemies" instance=ExtResource( 6 )]
position = Vector2( 48, 352 )
direction = 1

[node name="Enemy4" parent="Level3World/Enemies" instance=ExtResource( 6 )]
position = Vector2( 240, 352 )
direction = 1

[node name="FallZone" parent="Level3World" instance=ExtResource( 7 )]
position = Vector2( 176, 480 )

[node name="FadeIn" parent="Level3World" instance=ExtResource( 3 )]

[node name="PauseMenu" parent="." instance=ExtResource( 8 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -30.0
autoplay = true
[connection signal="body_entered" from="Level3World/Exit" to="Level3World" method="_on_Exit_body_entered"]
[connection signal="update_score" from="Level3World/Enemies/Enemy" to="Level3World" method="_on_Enemy_update_score"]
[connection signal="update_score" from="Level3World/Enemies/Enemy2" to="Level3World" method="_on_Enemy_update_score"]
[connection signal="update_score" from="Level3World/Enemies/Enemy3" to="Level3World" method="_on_Enemy_update_score"]
[connection signal="update_score" from="Level3World/Enemies/Enemy4" to="Level3World" method="_on_Enemy_update_score"]
[connection signal="body_entered" from="Level3World/FallZone" to="Level3World" method="_on_FallZone_body_entered"]
[connection signal="fade_finished" from="Level3World/FadeIn" to="Level3World" method="_on_FadeIn_fade_finished"]
